<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".OrderThankYouPage">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/main_bg">

        <LinearLayout
            android:id="@+id/home_mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="75dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_accent"
                android:paddingBottom="15dp">

                <ImageButton
                    android:id="@+id/home_backButton"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/main_accent"
                    android:contentDescription="Go Back"
                    android:onClick="backButtonHandler"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow" />

                <TextView
                    android:id="@+id/home_addressBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="Thank You!"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/otter_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8sp"
                android:text="@string/order_confirmed_header"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/orderIDField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8sp"
                android:text="[ORDER_ID_FIELD]"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/order_confirmed_text"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderTimeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="[TIME]"
                android:textAlignment="center"
                android:textColor="@color/main_text"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/contactField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="35dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingBottom="15dp"
                    android:text="@string/contact_header"
                    android:textAlignment="center"
                    android:textColor="@color/main_text"
                    android:textSize="25sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/contact1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/main_text"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/contact1_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/main_text"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/contact2"
                    android:textAlignment="viewStart"
                    android:textColor="@color/main_text"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/contact2_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/main_text"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_offeringsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:background="@drawable/rounded_rectangle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_help" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="[ITEM NAME]"
                    android:textColor="@color/main_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:srcCompat="@drawable/listicons" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="7dp"
                    android:text="[STORE NAME]"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="7dp"
                    android:text="[STORE LOCATION]"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="[ITEM PRICE]"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="00"
                    android:textColor="@color/main_text"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer_button_menu"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_alignBottom="@id/scrollview"
        android:background="@color/main_accent"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/received_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_text"
            android:onClick="orderReceivedHandler"
            android:text="@string/order_received"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/contact_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="contactButtonHandler"
            android:text="@string/order_help"
            android:textColor="@color/main_text"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>