<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".LoginPage" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:text="@string/main_welcomeText"
        android:textColor="@color/main_text"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="15sp"
        android:text="@string/app_name"
        android:textColor="@color/main_text"
        android:textSize="38sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20sp"
            android:paddingBottom="40sp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/main_text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:ems="10"
            android:hint="Full Name"
            android:inputType="text"
            android:textColor="@color/main_text"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:ems="10"
            android:hint="Email"
            android:inputType="text|textEmailAddress"
            android:textColor="@color/main_text"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:ems="10"
            android:hint="Password"
            android:inputType="text|textPassword"
            android:textColor="@color/main_text"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="text|textPassword"
            android:textColor="@color/main_text"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register_errorBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/error"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/main_text"
            android:onClick="registerHandler"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/go_to_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="goToLoginHandler"
            android:text="@string/go_to_login"
            android:textColor="@color/main_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>