<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentMethodPage">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/main_bg">

        <LinearLayout
            android:id="@+id/home_mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="75dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_accent"
                android:paddingBottom="15dp">

                <ImageButton
                    android:id="@+id/home_backButton"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/main_accent"
                    android:contentDescription="Go Back"
                    android:onClick="backButtonHandler"
                    android:padding="6dp"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow" />

                <TextView
                    android:id="@+id/home_addressBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="122dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="112dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="Payment Method"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioGroup
                android:id="@+id/rg_payment_methods"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/rb_cash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/main_text"
                    android:drawableStart="@mipmap/pcash"
                    android:drawablePadding="16dp"
                    android:onClick="cashHandler"
                    android:padding="16dp"
                    android:text="@string/cash"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/cash_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="8dp"
                        android:text="@string/cash_desc"
                        android:textColor="@color/hint"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        android:visibility="visible" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/rb_tng_ewallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/main_text"
                    android:drawableStart="@mipmap/ptng"
                    android:drawablePadding="16dp"
                    android:onClick="tngHandler"
                    android:padding="16dp"
                    android:text="@string/TNG"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/tng_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="8dp"
                        android:text="@string/tng_desc"
                        android:textColor="@color/hint"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/payment_qr" />
                </LinearLayout>


            </RadioGroup>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>